增加协议页面

--- a/app.json
+++ b/app.json
@@ -1,6 +1,8 @@
 {
   "pages":[
+    "pages/user/agreement",
     "pages/user/registe",
+
     "pages/user/resetpwd",
     "pages/user/forgetpwd",
     "pages/user/login",
